fix: update dynamic client registration service to handle agent application type and default constraints